fixed horizontal scrolling caused by header

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,7 @@
   border-bottom: 1px solid #545454;
   opacity: 0.7;
   width: 100%;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
